5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_579.log
== TEST (2019-03-14 16:19:45) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundação)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,2016-1909, anos de fundação)
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:20:17) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundaçao)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,2016-1909, anos de fundaçao)
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:20:33) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundacao)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,2016-1909, anos de fundacao)
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:20:46) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem,2016-1909, anos de fundacao.)
                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:20:57) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016-1909, anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:21:03) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundacao.")
-- EXECUTION TIME:
0.243484
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem,2016-1909, anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:21:05) 
-- CODE:
print("A UFAM tem,2016-1909, anos de fundacao.")
-- OUTPUT:
A UFAM tem,2016-1909, anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:21:48) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:21:52) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- EXECUTION TIME:
0.131497
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
